# kiteagent

./: .gitignore  Cargo.toml  README.md  Rakefile  config.test.toml  config.toml  patch.patch
agent/: Cargo.toml
agent/src/: conditions.rs  gear.rs  lib.rs  live_wind.rs  main.rs  notify.rs  scheduling.rs  weather.rs
agent/tests/: pipeline_test.rs
agent/tests/fixtures/: open_meteo_good_conditions.json  open_meteo_light_wind.json
deploy/: README.md  hrrr-server.service  kiteagent-agent.service  kiteagent-server.service  live-server.service  nginx.conf
hrrr-server/: Cargo.toml
hrrr-server/src/: db.rs  hrrr.rs  lib.rs  main.rs  rate_limit.rs  routes.rs
hrrr-server/static/: index.html
hrrr-server/tests/: functional.rs
kite-gear/: Cargo.toml  README.md
kite-gear/src/: lib.rs
kite-gear/tests/: gear_test.rs
live-server/: Cargo.toml  build.rs
live-server/proto/: live.proto
live-server/src/: db.rs  grpc.rs  lib.rs  main.rs  parse.rs  routes.rs
live-server/static/: index.html
live-server/tests/: functional.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  routes.rs  vapid.rs
server/static/: doc.html  index.html  manifest.json  sw.js
server/test_keys/: private.pem
server/tests/: routes_test.rs
shared/: Cargo.toml
shared/src/: config.rs  db.rs  lib.rs
