[package]
name = "kiteagent-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "kiteagent_agent"
path = "src/lib.rs"

[[bin]]
name = "kiteagent-agent"
path = "src/main.rs"

[dependencies]
kiteagent-shared = { path = "../shared" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio-cron-scheduler = "0.13"
sha2 = "0.10"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
