[package]
name = "live-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "live_server"
path = "src/lib.rs"

[[bin]]
name = "live-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
scraper = "0.20"
regex = "1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
axum-test = "14"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
